
cgrates (0.10.1) UNRELEASED; urgency=medium

  * [FilterS] Removed rals_conns in favor of reading the account
    directly from DataDB
  * [SessionS] Added check for missing CGRevent
  * [DiameterAgent] Using String function from diam.Message instead of
    ToJSON for request String method
  * [DiameterAgent] Updated 3gp_vendor dictionary
  * [Templates] Added new dataconvertor: *ip2hex
  * [AgentRequest] Added support for *group type and correctly overwrite
    the values in case of *variable
  * [ERs] Correctly populate ConcurrentRequest from config in
    EventReader
  * [SupplierS] In case of missing usage from Event use 1 minute as
    default value
  * [DataDB] Mongo support different marshaler than msgpack
  * [ConnManager] Fixed rpc_conns handling id with two connections and one of
    it *internal
  * [Replicator] Added Limit and StaticTTL otions for Items from
    DataDB/StorDB
  * [Migrator] Auto discover tenant from key instead of taking it from config
  * [Templates] Fixed missing "*" for strip and padding strategy
  * [SessionS] Update subflags for *rals ( *authorize and *initiate )
  * [AgentRequest] Improved NavigableMap
  * [AgentRequest] FieldAsInterface return Data instead of NMItem
  * [SupplierS] Allow multiple suppliers with the same ID
  * [Engine] Skip caching if limit is 0
  * [CacheS] Avoid long recaching
  * [SessionS] Use correctly SessionTTLUsage when calculate end usage in case of terminate session from ttl mechanism
  * [SessionS] Add SessionTLLLastUsage as option for an extra debit in case of ttl mechanism

 -- DanB <danb@cgrates.org>   Wed, 5 May 2020 15:22:59 +0200

cgrates (0.10.0) UNRELEASED; urgency=medium

  * Creating first stable branch. 

 -- DanB <danb@cgrates.org>  Thu, 6 Feb 2020 12:05:00 +0200

cgrates (0.9.1~rc8) UNRELEASED; urgency=medium

  * RC8.

 -- DanB <danb@cgrates.org>  Mon, 22 Sep 2015 12:05:00 +0200

cgrates (0.9.1~rc7) UNRELEASED; urgency=low

  * RC7.
