@@ -1541,6 +1541,64 @@ func TestAgReqGroupType(t *testing.T) {
 	}
 }
 
+func TestAgReqSetFieldsIp2Hex(t *testing.T) {
+	cfg, _ := config.NewDefaultCGRConfig()
+	data := engine.NewInternalDB(nil, nil, true, cfg.DataDbCfg().Items)
+	dm := engine.NewDataManager(data, config.CgrConfig().CacheCfg(), nil)
+	filterS := engine.NewFilterS(cfg, nil, dm)
+	agReq := NewAgentRequest(nil, nil, nil, nil, nil, "cgrates.org", "", filterS, nil, nil)
+	agReq.CGRRequest.Set(&utils.FullPath{Path: "IP", PathItems: utils.PathItems{{Field: "IP"}}}, utils.NewNMData("62.87.114.244"))
+
+	tplFlds := []*config.FCTemplate{
+		{Tag: "IP",
+			Path: utils.MetaVars + utils.NestingSep + "IP", Type: utils.MetaVariable,
+			Value: config.NewRSRParsersMustCompile("~*cgreq.IP{*ip2hex}", true, utils.INFIELD_SEP)},
+	}
+	for _, v := range tplFlds {
+		v.ComputePath()
+	}
+	eMp := utils.NavigableMap2{}
+	eMp.Set(utils.PathItems{{Field: utils.NodeID}}, utils.NewNMData(config.CgrConfig().GeneralCfg().NodeID))
+	eMp.Set(utils.PathItems{{Field: "IP"}}, &utils.NMSlice{
+		&config.NMItem{Data: "0x3e5772f4", Path: []string{"IP"},
+			Config: tplFlds[0]}})
+
+	if err := agReq.SetFields(tplFlds); err != nil {
+		t.Error(err)
+	} else if !reflect.DeepEqual(agReq.Vars, eMp) {
+		t.Errorf("expecting: %+v,\n received: %+v", eMp, agReq.Vars)
+	}
+}
+
+func TestAgReqSetFieldsString2Hex(t *testing.T) {
+	cfg, _ := config.NewDefaultCGRConfig()
+	data := engine.NewInternalDB(nil, nil, true, cfg.DataDbCfg().Items)
+	dm := engine.NewDataManager(data, config.CgrConfig().CacheCfg(), nil)
+	filterS := engine.NewFilterS(cfg, nil, dm)
+	agReq := NewAgentRequest(nil, nil, nil, nil, nil, "cgrates.org", "", filterS, nil, nil)
+	agReq.CGRRequest.Set(&utils.FullPath{Path: "CustomField", PathItems: utils.PathItems{{Field: "CustomField"}}}, utils.NewNMData(string([]byte{0x94, 0x71, 0x02, 0x31, 0x01, 0x59})))
+
+	tplFlds := []*config.FCTemplate{
+		{Tag: "CustomField",
+			Path: utils.MetaVars + utils.NestingSep + "CustomField", Type: utils.MetaVariable,
+			Value: config.NewRSRParsersMustCompile("~*cgreq.CustomField{*string2hex}", true, utils.INFIELD_SEP)},
+	}
+	for _, v := range tplFlds {
+		v.ComputePath()
+	}
+	eMp := utils.NavigableMap2{}
+	eMp.Set(utils.PathItems{{Field: utils.NodeID}}, utils.NewNMData(config.CgrConfig().GeneralCfg().NodeID))
+	eMp.Set(utils.PathItems{{Field: "CustomField"}}, &utils.NMSlice{
+		&config.NMItem{Data: "0x947102310159", Path: []string{"CustomField"},
+			Config: tplFlds[0]}})
+
+	if err := agReq.SetFields(tplFlds); err != nil {
+		t.Error(err)
+	} else if !reflect.DeepEqual(agReq.Vars, eMp) {
+		t.Errorf("expecting: %+v,\n received: %+v", eMp, agReq.Vars)
+	}
+}
+
 func TestAgReqFiltersInsideField(t *testing.T) {
 	//simulate the diameter request
 	m := diam.NewRequest(diam.CreditControl, 4, nil)
